<resources>
    <string name="app_name">SpaceX</string>
    <string name="text_company_info">%1$s was founded by %2$s in %3$d. It has now %4$d employees, %5$d launch sites, and is valued at USD %6$d</string>
    <string name="text_no_info">No Info yet!</string>
    <string name="text_days">Days %1$s now:</string>
    <string name="text_title_mission">Mission:</string>
    <string name="text_title_date_time">Date/time:</string>
    <string name="text_title_rocket">Rocket:</string>
    <string name="text_label_article">Article</string>
    <string name="text_label_wikipedia">Wikipedia</string>
    <string name="text_label_video">Video</string>
    <string name="text_error_invalid_link">Invalid link!</string>
    <string name="text_label_open">Open…</string>
    <string name="text_label_filter">Filter</string>
    <string name="text_title_company">COMPANY</string>
    <string name="text_title_launches">LAUNCHES</string>
    <string name="text_title_filter">Filter Launches</string>
    <string name="text_action_filter">Filter</string>
    <string name="text_action_reset_default">Reset defaults</string>
    <string name="text_no">NO</string>
    <string name="text_yes">YES</string>
    <string-array  name="yes_no">
        <item>YES</item>
        <item>NO</item>
    </string-array >
    <string-array name="sort_order">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>
</resources>