<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title_open_with"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="12dp"
        android:text="@string/text_label_open"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button_open_article"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:text="@string/text_label_article"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_open_with" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c1c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_article" />

    <TextView
        android:id="@+id/button_open_wikipedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:text="@string/text_label_wikipedia"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_wikipedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c1c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_open_wikipedia" />

    <TextView
        android:id="@+id/button_open_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:text="@string/text_label_video"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2" />

</androidx.constraintlayout.widget.ConstraintLayout>
